# hive

./: .commitmsg  .gitignore  ARCHITECTURE.md  CLAUDE.md  CODEOWNERS  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  llm_client.py  pyproject.toml  run_ept.py  run_hive.py  test_interaction.py
.claude/: commands.md  settings.json
.github/: copilot-instructions.md  dependabot.yml
.github/workflows/: codeql.yml
.serena/: project.yml
.serena/memories/: project_overview.md  style_and_conventions.md  suggested_commands.md  task_completion.md
docs/superpowers/specs/: 2026-06-01-proxy-pool-design.md
ept/: __init__.py  agents.py  connectors.py  crew.py  hardening.py  llm_client.py  memory.py  state.py  ui.py
hive/: __init__.py  agents.py  connectors.py  crew.py  dashboard.py  hardening.py  llm_client.py  memory.py  prompts.py  sandbox.py  state.py  telemetry.py  ui.py
hive/plugins/: __init__.py  base.py  registry.py
hive/plugins/examples/: __init__.py  company_guidelines.py  github_connector.py  lifecycle_hooks.py  sap_knowledge.py
tests/: test_ept.py  test_hardening.py  test_hive.py  test_plugins.py
