[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "hive-ept"
version = "1.0.0"
description = "Hive — Collective Intelligence Building Software. A multi-agent SDLC framework."
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.12"
authors = [
    { name = "Naveen Kumar Baskaran" },
]
keywords = ["ai", "agents", "multi-agent", "sdlc", "code-generation", "llm"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Code Generators",
    "Topic :: Software Development :: Quality Assurance",
]
dependencies = [
    "httpx>=0.27",
]

[project.optional-dependencies]
anthropic = ["anthropic>=0.40"]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.6",
]
all = ["hive-ept[anthropic,dev]"]

[project.scripts]
hive = "run_hive:main"

[project.urls]
Homepage = "https://github.com/naveenkumarbaskaran/hive"
Repository = "https://github.com/naveenkumarbaskaran/hive"
Issues = "https://github.com/naveenkumarbaskaran/hive/issues"

# ── Tool configuration ──────────────────────────────────────────────────────

[tool.hatch.build.targets.wheel]
packages = ["hive", "run_hive.py"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short"

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["hive", "tests"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]
ignore = ["E501"]  # line length handled by formatter

[tool.ruff.format]
quote-style = "double"
